# agente_analista

./: .gitignore  main.py  programa.py  pyproject.toml
db/: chroma.sqlite3
