[project]
name = "projetoaileitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai>=0.102.0",
    "crewai-tools>=0.36.0",
    "db>=0.1.1",
    "dotenv>=0.9.9",
    "langchain>=0.3.19",
    "langchain-groq>=0.2.4",
    "pyproject-toml>=0.1.0",
    "streamlit>=1.42.2",
]
